Actualizar título de la página en index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/css/ui.jqgrid-bootstrap.min.css"> -->
     <!-- <link rel="stylesheet" href="../plugins/jqgrid/plugins/searchFilter.css"> -->
 
-    <title>React App</title>
+    <title>Prueba Tecnica -  PCCOM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
