Actualizar estilos de JqGridComponent.css y agregar funcionalidad de eliminar registro en jqgrid.js

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,18 +27,18 @@
     <!-- <link rel="stylesheet" href="../plugins/jqgrid/css/ui.jqgrid.css"> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/css/ui.jqgrid.min.css"> -->
 
-     <!-- <link rel="stylesheet" href="../plugins/jqgrid/css/ui.jqgrid-bootstrap.css"> -->
+    <!-- <link rel="stylesheet" href="../plugins/jqgrid/css/ui.jqgrid-bootstrap.css"> -->
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/css/ui.jqgrid-bootstrap.min.css"> -->
     <!-- <link rel="stylesheet" href="../plugins/jqgrid/plugins/searchFilter.css"> -->
 
-    <title>Prueba Tecnica -  PCCOM</title>
+    <title>Prueba Tecnica - PCCOM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
-      <!-- This HTML file is a template.
+
+    <!-- This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
@@ -46,15 +46,35 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`. -->
-    
-     <!-- <script src="../plugins/jqgrid/js/jquery.jqGrid.min.js"></script> -->
+
+    <!-- <script src="../plugins/jqgrid/js/jquery.jqGrid.min.js"></script> -->
     <!-- <script type="text/ecmascript" src="../plugins/jqgrid/js/i18n/grid.locale-en.js"></script> -->
     <!-- <script src="../plugins/jqgrid/js/jquery-1.7.2.min.js"></script> -->
 
-    <script src="../plugins/jqgrid/js/jquery.jqGrid.src.js"></script> 
+    <script src="../plugins/jqgrid/js/jquery.jqGrid.src.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/jquery.jqgrid.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/jquery.jqgrid.min.js"></script>
     <!-- searchFilter -->
     <!-- <script src="../plugins/jqgrid/plugins/jquery.searchFilter.js"></script> -->
+
+    <!-- Bootra -->
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
+      crossorigin
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
+      crossorigin
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+      crossorigin
+    ></script>
+
+    <script>
+      var Alert = ReactBootstrap.Alert;
+    </script> -->
   </body>
 </html>
