--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,12 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/css/ui.jqgrid-bootstrap.min.css"> -->
     <!-- <link rel="stylesheet" href="../plugins/jqgrid/plugins/searchFilter.css"> -->
 
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqgrid/5.8.5/css/ui.jqgrid-bootstrap-ui.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqgrid/5.8.5/css/ui.jqgrid-bootstrap.min.css">
+
+    
     <title>Prueba Tecnica - PCCOM</title>
   </head>
   <body>
@@ -47,14 +53,24 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`. -->
 
-    <!-- <script src="../plugins/jqgrid/js/jquery.jqGrid.min.js"></script> -->
-    <!-- <script type="text/ecmascript" src="../plugins/jqgrid/js/i18n/grid.locale-en.js"></script> -->
-    <!-- <script src="../plugins/jqgrid/js/jquery-1.7.2.min.js"></script> -->
+  
+
+
+
+
 
     <script src="../plugins/jqgrid/js/jquery.jqGrid.src.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/jquery.jqgrid.min.js"></script>
-    <!-- searchFilter -->
+
+
+
+
+
+
+
+
+
     <!-- <script src="../plugins/jqgrid/plugins/jquery.searchFilter.js"></script> -->
 
     <!-- Bootra -->
@@ -76,5 +92,8 @@
     <script>
       var Alert = ReactBootstrap.Alert;
     </script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqgrid/5.8.5/js/jquery.jqGrid.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqgrid/5.8.5/js/i18n/grid.locale-es.min.js"></script>
+    
   </body>
 </html>
