--- a/client/public/index.html
+++ b/client/public/index.html
@@ -61,7 +61,7 @@
 
     <script src="../plugins/jqgrid/js/jquery.jqGrid.src.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/jquery.jqgrid.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/free-jqgrid/4.15.5/jquery.jqgrid.min.js"></script> -->
 
 
 
