--- a/client/public/index.html
+++ b/client/public/index.html
@@ -94,6 +94,8 @@
     </script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqgrid/5.8.5/js/jquery.jqGrid.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqgrid/5.8.5/js/i18n/grid.locale-es.min.js"></script>
+    <!-- jquery.jqGrid.src.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqgrid/5.8.5/js/jquery.jqGrid.src.js"></script>
     
     
   </body>
